Project 2 - Parser/tests/parser/test019.parse.soln.yacc.err
test019.lgf:2.14-test019.lgf:2.15 Error: syntax error: deleting  COMMA
