Project 2 - Parser/tests/parser/test019.lgf
(* type decl with missing type variable *)
type T ['a, 'b, ] = ('a -> 'b) -> 'a -> 'b
; 0
